[tool.poetry]
name = "whatwillwedrink2"
version = "0.1.0"
description = ""
authors = ["Yauheni Bokach <dharmagetic@gmail.com>", "Kirill Petrovskiu <kirillpior@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.4"
requests = "^2.25.1"
black = "^21.6b0"
psycopg2 = "^2.8.6"
django-environ = "^0.4.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
